--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.1.1",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "csstack": "^1.2.5"
+    "csstack": "^1.3.1"
   }
 }
